Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/7034019/T7034019c.out
T7034019c.java:18:20: compiler.err.name.clash.same.erasure.no.override: foo, , T7034019c.B, foo, , T7034019c.A
T7034019c.java:20:14: compiler.err.ref.ambiguous: foo, kindname.method, <T>foo(), T7034019c.B, kindname.method, <T>foo(), T7034019c.A
2 errors
